<resources>
    <string name="app_name">ScoreTrack</string>
    <string name="achternaam">achternaam</string>
    <string name="naam">naam</string>
    <string name="mail">mail</string>
    <string name="wachtwoord">wachtwoord</string>
    <string name="register">Register</string>
    <string name="voornaam">voornaam</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="starting_score">starting score</string>
    <string name="back">x</string>
    <string name="title">Title</string>
    <string name="_0">0</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_5">Player 5</string>
    <string name="button">Button</string>
    <string name="title_activity_set_manual_tracking">SetManualTracking</string>
    <string name="start_game">start game</string>
    <string name="add">Add score</string>
    <string name="submit">submit</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
</resources>