<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/green">


    <Button
        android:id="@+id/goback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/back"
        android:backgroundTint="@color/lighter_green"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:autofillHints=""
        android:inputType="text"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/integerEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/_0"
        android:hint="@string/starting_score"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/name1EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_1"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:autofillHints=""
        android:inputType="text"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/name2EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_2"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:autofillHints=""
        android:inputType="text"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/name3EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_3"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:autofillHints=""
        android:inputType="text"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/name4EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_4"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:autofillHints=""
        android:inputType="text"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/name5EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_5"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:autofillHints=""
        android:inputType="text"
        android:minWidth="64dp"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:backgroundTint="@color/lighter_green"
        android:minWidth="64dp"
        android:minHeight="48dp"/>
</LinearLayout>